Update the readme file

--- a/readme
+++ b/readme
@@ -2,13 +2,11 @@
 
 2) Install the packages - yarn or npm Install
 
-3) Run - nodemon server.js
-
-
-
+3) Run - npm start
 
 // Deploy on heroku
 1) heroku login
-2) heroku create react-news-app-api
-3) git remote -v (To check heroku added or not)
+2) heroku create react - news - app - api
+3) git remote - v(To check heroku added or not)
 4) to push after commit - git push heroku
+5) heroku open(To open the app)
